// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formats aliased unknown export 1`] = `
Object {
  "stderr": "Creating an optimized production build...
Failed to compile.

./src/App.js
Attempted import error: 'bar' is not exported from './AppUnknownExport' (imported as 'bar2').


",
  "stdout": "",
}
`;

exports[`formats aliased unknown export 2`] = `
Object {
  "stderr": "> build
> react-scripts build

Creating an optimized production build...
Failed to compile.

Syntax error: /private/var/folders/4_/mlyy2b8102j_7y42pq063cr40000gn/T/8f041a170de78ef5ac74d17fa6b7ff98/src/AppCss.css Unexpected } (3:2)
  1 | .App {
  2 |   color: red;
> 3 | }}
    |  ^
  4 | 

",
  "stdout": "",
}
`;

exports[`formats aliased unknown export 3`] = `
Object {
  "stderr": "> build
> react-scripts build

Creating an optimized production build...
Failed to compile.

Attempted import error: 'bar' is not exported from './AppUnknownExport' (imported as 'bar2').

",
  "stdout": "",
}
`;

exports[`formats babel syntax error 1`] = `
Object {
  "stderr": "Creating an optimized production build...
Failed to compile.

./src/App.js
Syntax error: Unterminated JSX contents (8:13)

   6 |       <div>
   7 |         <span>
>  8 |       </div>
     |             ^
   9 |     );
  10 |   }
  11 | }


",
  "stdout": "",
}
`;

exports[`formats css syntax error 1`] = `
Object {
  "stderr": "Creating an optimized production build...
Failed to compile.

./src/AppCss.css
Syntax error: Unexpected } (3:2)

  1 | .App {
  2 |   color: red;
> 3 | }}
    |  ^
  4 |


",
  "stdout": "",
}
`;

exports[`formats eslint error 1`] = `
Object {
  "stderr": "Creating an optimized production build...
Failed to compile.

./src/App.js
  Line 4:13:  'b' is not defined  no-undef

Search for the keywords to learn more about each error.


",
  "stdout": "",
}
`;

exports[`formats eslint warning 1`] = `
Object {
  "stderr": "",
  "stdout": "Creating an optimized production build...
Compiled with warnings.

./src/App.js
  Line 3:10:  'foo' is defined but never used  no-unused-vars

Search for the keywords to learn more about each warning.
To ignore, add // eslint-disable-next-line to the line before.

",
}
`;

exports[`formats file not found error 1`] = `
Object {
  "stderr": "Creating an optimized production build...
Failed to compile.

./src/App.js
Cannot find file './ThisFileSouldNotExist' in './src'.


",
  "stdout": "",
}
`;

exports[`formats missing package 1`] = `
Object {
  "stderr": "Creating an optimized production build...
Failed to compile.

./src/App.js
Cannot find module: 'unknown-package'. Make sure this package is installed.

You can install this package by running: yarn add unknown-package.


",
  "stdout": "",
}
`;

exports[`formats no default export 1`] = `
Object {
  "stderr": "Creating an optimized production build...
Failed to compile.

./src/App.js
Attempted import error: './ExportNoDefault' does not contain a default export (imported as 'myImport').


",
  "stdout": "",
}
`;

exports[`formats no default export 2`] = `
Object {
  "stderr": "> build
> react-scripts build

Creating an optimized production build...
Failed to compile.

Attempted import error: './ExportNoDefault' does not contain a default export (imported as 'myImport').

",
  "stdout": "",
}
`;

exports[`formats out of scope error 1`] = `
Object {
  "stderr": "Creating an optimized production build...
Failed to compile.

./src/App.js
You attempted to import ../OutOfScopeImport which falls outside of the project src/ directory. Relative imports outside of src/ are not supported.
You can either move it inside src/, or add a symlink to it from project's node_modules/.


",
  "stdout": "",
}
`;

exports[`formats unknown export 1`] = `
Object {
  "stderr": "Creating an optimized production build...
Failed to compile.

./src/App.js
Attempted import error: 'bar' is not exported from './AppUnknownExport'.


",
  "stdout": "",
}
`;

exports[`formats unknown export 2`] = `
Object {
  "stderr": "> build
> react-scripts build

Creating an optimized production build...
Failed to compile.

Attempted import error: 'bar' is not exported from './AppUnknownExport' (imported as 'bar').

",
  "stdout": "",
}
`;

exports[`helps when users tries to use sass 1`] = `
Object {
  "stderr": "",
  "stdout": "
> build
> react-scripts build

Creating an optimized production build...
Compiled successfully.

File sizes after gzip:

  45.76 kB  build/static/js/main.07c4efe6.js

The project was built assuming it is hosted at /.
You can control this with the homepage field in your package.json.

The build folder is ready to be deployed.
You may serve it with a static server:

  npm install -g serve
  serve -s build

Find out more about deployment here:

  https://cra.link/deployment
",
}
`;
